# dedisbench

./: AUTHORS  ChangeLog  DEDISbench.c  DEDISbench.h  DEDISgen-utils.c  DEDISgen.c  Makefile  Makefile.am  Makefile.in  NEWS  README  README.mkd  bench.c  benchlimit.c  benchread.c  berk.c  berk.h  block4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan  defconf.ini  defines.h  dist_highperf  doescrita  duplicatedist.c  duplicatedist.h  fault.c  fault.h  histogram.py  io.c  io.h  iodist.c  iodist.h  plographs  populate.c  (+5 more)
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
benchcore/: io.h
benchcore/.deps/: DEDISbench-io.Po
benchcore/accesses/.deps/: DEDISbench-iodist.Po
benchcore/duplicates/: duplicatedist.c  duplicatedist.h
benchcore/duplicates/.deps/: DEDISbench-duplicatedist.Po
benchcore/sharedmem/: sharedmem.c  sharedmem.h
benchcore/sharedmem/.deps/: DEDISbench-sharedmem.Po
conf/: defconf.ini  dist_archival  dist_kernels  dist_personalfiles  dist_ubuntuamd
core/: io.c  io.h
core/.deps/: DEDISbench-io.Po
core/accesses/: iodist.c  iodist.h
core/accesses/.deps/: DEDISbench-iodist.Po
core/duplicates/: duplicatedist.c  duplicatedist.h
core/duplicates/.deps/: DEDISbench-duplicatedist.Po
core/sharedmem/: sharedmem.c  sharedmem.h
core/sharedmem/.deps/: DEDISbench-sharedmem.Po
io/: plotio.c  plotio.h
populate/: populate.c  populate.h
populate/.deps/: DEDISbench-populate.Po
structs/: defines.h  structs.h
utils/: utils.c  utils.h
utils/db/: berk.c  berk.h
utils/db/.deps/: DEDISbench-berk.Po  DEDISbench-berk.Tpo
utils/random/: random.c  random.h
utils/random/.deps/: DEDISbench-random.Po
